--- a/messaging_app/messaging_app/Dockerfile
+++ b/messaging_app/messaging_app/Dockerfile
@@ -16,7 +16,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . /app/
 
 # Expose port 8000 (Django default)
-EXPOSE 8000
+EXPOSE -p 8000
 
 # Default command to run Django development server
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
