--- a/messaging_app/blue_deployment.yaml
+++ b/messaging_app/blue_deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: messaging-app
-          image: YOUR_IMAGE:blue
+          image: YOUR_IMAGE:2.0
           ports:
             - containerPort: 8000
