--- a/messaging_app/messaging_app/.github/workflows/ci.yml
+++ b/messaging_app/messaging_app/.github/workflows/ci.yml
@@ -46,6 +46,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r messaging_app/requirements.txt
+          pip install flake8 coverage
 
       - name: Wait for MySQL to be ready
         run: |
@@ -56,8 +57,21 @@ jobs:
             sleep 5
           done
 
-      - name: Run Django tests
+      - name: Run flake8 Linting
+        run: |
+          echo "Running flake8 linting..."
+          flake8 messaging_app --count --show-source --statistics
+        continue-on-error: false  # Fail if flake8 errors
+
+      - name: Run tests with coverage
         run: |
           cd messaging_app
-          python manage.py migrate
-          python manage.py test
+          coverage run manage.py test
+          coverage report
+          coverage html -d coverage_html
+
+      - name: Upload Coverage Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-report
+          path: messaging_app/coverage_html
